[gd_scene load_steps=5 format=2]

[ext_resource path="res://Pieces/Crustacean.gd" type="Script" id=1]
[ext_resource path="res://assets/Lobster.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 1.0

[sub_resource type="Animation" id=2]
resource_name = "play"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 1 ]
}

[node name="Crustacean" type="Area2D"]
scale = Vector2( 2.5, 2.5 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/play = SubResource( 2 )

[node name="MovementTimer" type="Timer" parent="."]
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -100 )
collide_with_areas = true
collide_with_bodies = false
[connection signal="area_entered" from="." to="." method="_on_Crustacean_area_entered"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_MovementTimer_timeout"]
